updates jenkinsfile and pom.xml file